crates/crates_io_database/tests/snapshots/email_constraints__create_primary_email.snap
---
source: crates/crates_io_database/tests/email_constraints.rs
expression: result
---
Ok(
    EmailSnapshot {
        id: 1,
        user_id: 1,
        email: "primary@example.com",
        primary: true,
    },
)
