crates/crates_io_database/tests/snapshots/email_constraints__create_primary_email_when_one_exists.snap
---
source: crates/crates_io_database/tests/email_constraints.rs
expression: "(first, second)"
---
(
    Ok(
        EmailSnapshot {
            id: 1,
            user_id: 1,
            email: "primary@example.com",
            primary: true,
        },
    ),
    Err(
        DatabaseError(
            Unknown,
            "User must have one primary email, found 2",
        ),
    ),
)
