crates/crates_io_database/tests/snapshots/email_constraints__create_same_email_for_different_users.snap
---
source: crates/crates_io_database/tests/email_constraints.rs
expression: "(first, second)"
---
(
    Ok(
        EmailSnapshot {
            id: 1,
            user_id: 1,
            email: "primary@example.com",
            primary: true,
        },
    ),
    Ok(
        EmailSnapshot {
            id: 2,
            user_id: 2,
            email: "primary@example.com",
            primary: true,
        },
    ),
)
