crates/crates_io_database/tests/snapshots/email_constraints__create_secondary_email.snap
---
source: crates/crates_io_database/tests/email_constraints.rs
expression: "(primary, secondary)"
---
(
    Ok(
        EmailSnapshot {
            id: 1,
            user_id: 1,
            email: "primary@example.com",
            primary: true,
        },
    ),
    Ok(
        EmailSnapshot {
            id: 2,
            user_id: 1,
            email: "secondary@example.com",
            primary: false,
        },
    ),
)
