crates/crates_io_database/tests/snapshots/email_constraints__create_secondary_email_with_same_email_as_primary.snap
---
source: crates/crates_io_database/tests/email_constraints.rs
expression: "(primary, secondary)"
---
(
    EmailSnapshot {
        id: 1,
        user_id: 1,
        email: "primary@example.com",
        primary: true,
    },
    Err(
        DatabaseError(
            UniqueViolation,
            "duplicate key value violates unique constraint \"unique_user_email\"",
        ),
    ),
)
