crates/crates_io_database/tests/snapshots/email_constraints__create_too_many_emails.snap
---
source: crates/crates_io_database/tests/email_constraints.rs
expression: errors
---
[
    DatabaseError(
        Unknown,
        "User cannot have more than 32 emails",
    ),
]
