crates/crates_io_database/tests/snapshots/email_constraints__delete_only_email.snap
---
source: crates/crates_io_database/tests/email_constraints.rs
expression: result
---
Ok(
    1,
)
