crates/crates_io_database/tests/snapshots/email_constraints__delete_primary_email_with_secondary.snap
---
source: crates/crates_io_database/tests/email_constraints.rs
expression: result
---
Err(
    DatabaseError(
        Unknown,
        "Cannot delete primary email. Please set another email as primary first.",
    ),
)
