crates/crates_io_database/tests/snapshots/email_constraints__demote_primary_without_new_primary.snap
---
source: crates/crates_io_database/tests/email_constraints.rs
expression: result
---
Err(
    DatabaseError(
        Unknown,
        "User must have one primary email, found 0",
    ),
)
