crates/crates_io_database/tests/snapshots/email_constraints__promote_secondary_to_primary.snap
---
source: crates/crates_io_database/tests/email_constraints.rs
expression: result
---
Ok(
    [
        (
            1,
            "primary@example.com",
            false,
        ),
        (
            2,
            "secondary@example.com",
            true,
        ),
    ],
)
